--- a/css/style.css
+++ b/css/style.css
@@ -1785,7 +1785,7 @@ body.ie ._ibg img {
     margin: 0px 0px 30px 0px;
     position: fixed;
     width: 100%;
-    height: 100%;
+    height: 87px;
     z-index: 10;
   }
 
@@ -1795,6 +1795,10 @@ body.ie ._ibg img {
 
   .header__link {
     font-size: 13px;
+  }
+
+  .menu__body {
+    position: fixed;
   }
 
   .page__private {
