--- a/css/style.css
+++ b/css/style.css
@@ -986,7 +986,7 @@ body.ie ._ibg img {
   font-size: 12px;
   color: #000;
   text-decoration: underline;
-  padding: 2px 4px;
+  padding: 4px 4px 3px 4px;
   margin: 0px 25px 0px 0px;
   letter-spacing: 1.2px;
   text-transform: uppercase;
@@ -998,6 +998,7 @@ body.ie ._ibg img {
   background-color: #000;
   color: #fff;
   text-decoration: none;
+  border-radius: 2px;
 }
 
 .header__link {
@@ -1383,6 +1384,9 @@ body.ie ._ibg img {
 .body-contacts__item_p {
   padding: 0px 0px 0px 0px;
   margin: 0px 30px 0px 0px;
+  -webkit-transition: 0.3s ease;
+  -o-transition: 0.3s ease;
+  transition: 0.3s ease;
 }
 
 .body-contacts__item_p:last-child {
@@ -1437,6 +1441,7 @@ body.ie ._ibg img {
   .menu__link:hover {
     background-color: #000;
     color: #fff;
+    border-radius: 3px;
   }
 }
 
@@ -1444,6 +1449,20 @@ body.ie ._ibg img {
   .quantity__button:hover::before,
   .quantity__button:hover::after {
     background-color: rgba(0, 0, 0, 0.5);
+  }
+
+  .body-contacts__item_2:hover {
+    text-decoration: underline;
+  }
+
+  .body-contacts__item_3:hover {
+    text-decoration: underline;
+  }
+
+  .body-contacts__item_p:hover {
+    -webkit-transform: scale(1.2);
+        -ms-transform: scale(1.2);
+            transform: scale(1.2);
   }
 }
 
