--- a/css/style.css
+++ b/css/style.css
@@ -1306,20 +1306,18 @@ body.ie ._ibg img {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 100px;
           flex: 0 0 100px;
+  width: 100px;
   height: 100px;
   background-color: #000;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  text-align: center;
 }
 
 .item-why__img img {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translate(0px, -50%);
+      -ms-transform: translate(0px, -50%);
+          transform: translate(0px, -50%);
   max-width: 100%;
 }
 
@@ -1444,6 +1442,12 @@ body.ie ._ibg img {
 
 .bottom-contacts__form-button__btn {
   padding: 10px 15px;
+}
+
+.imgg {
+  background: #000;
+  width: 100px;
+  height: 100px;
 }
 
 @media (min-width: 768px) {
